# SimpleVulkanRenderer

./: .editorconfig  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
src/: CMakeLists.txt  Camera.h  CommandPool.cpp  CommandPool.h  Device.cpp  Device.h  Light.h  Mesh.h  ValueCache.h  Window.cpp  Window.h  main.cpp  mesh.cpp  pch.h
src/shaders/: CMakeLists.txt  embed.asm.in  main.frag.hlsl  main.vert.hlsl
src/shaders/include/: constants.hlsl  shaders.h  shared.hlsl
